# Macro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
cmake/: Core.cmake  Macro.cmake
inc/ae2f/: Macro.h
src/: CMakeLists.txt  main.c
src-macro/: CMakeLists.txt  main.c
